350. Cambiar el mensaje en la directiva del span

--- a/src/app/productos/pages/agregar/agregar.component.html
+++ b/src/app/productos/pages/agregar/agregar.component.html
@@ -3,18 +3,23 @@
 <hr>
 
 
-<form>
+<form [formGroup]="miFormulario">
     <div class="row g-3 align-items-center mb-3">
         <div class="col-auto">
             <label class="col-form-label">Nombre:</label>
         </div>
 
         <div class="col-auto">
-            <input class="form-control" >
+            <input class="form-control" 
+                formControlName="nombre" >
         </div>
 
         <div class="col-auto">
-            <span class="form-text">Este campo es requerido</span>
+            <span class="form-text"
+                dp-error-mgs
+                color="green"
+                mensaje="*Por favor ingrese este campo."
+                *ngIf="tieneError('nombre')"></span>
         </div>
 
     </div>
@@ -34,3 +39,6 @@
 
 
 <h3 class="mt-5" >Formulario</h3>
+
+<pre>Value: {{ miFormulario.value | json}}</pre>
+<pre>Valid: {{ miFormulario.valid }}</pre>
