mostrar ocultar sí tiene error el campo de nombre

--- a/src/app/productos/pages/agregar/agregar.component.html
+++ b/src/app/productos/pages/agregar/agregar.component.html
@@ -18,7 +18,7 @@
             <span dp-error-mgs
                 [mensaje] = "texto1"
                 [color] = "color"
-                *ngIf="tieneError('nombre')"></span>
+                [valido]="!tieneError('nombre')"></span>
         </div>
 
     </div>
