Directivas estructurales personalizadas

--- a/src/app/productos/pages/agregar/agregar.component.html
+++ b/src/app/productos/pages/agregar/agregar.component.html
@@ -50,3 +50,17 @@
 
 <pre>Value: {{ miFormulario.value | json}}</pre>
 <pre>Valid: {{ miFormulario.valid }}</pre>
+
+
+<div class="row mt-5" 
+    *dpCustomIf="miFormulario.valid">
+    <div class="col">
+        <div class="alert alert-primary">
+            Todo OK!
+        </div>
+    </div>
+</div>
+
+
+
+
